[tool.poetry]
name = "graphs"
version = "0.1.0"
description = ""
authors = ["MrMaguila <gabrielgf6000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
networkx = "^3.2.1"
numpy = "^1.26.2"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
